<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">
        
        <TextView
            android:id="@+id/local_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/local"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/upper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/local_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/local_minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/minus_one"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/local_score_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/points_local"
                android:textColor="@color/black"
                android:textSize="72sp"
                tools:text="62" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/local_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/plus_one"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/local_two_points_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/plus_two"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/center_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_below="@id/upper_layout"
            android:layout_marginTop="32dp"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/restart_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="16dp"
                android:textColor="@color/black"
                android:text="Prueba"
                android:src="@drawable/ic_restore_black" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/basket_ball"
                android:textColor="@color/black"
                android:textSize="60sp"
                tools:text="62" />

            <ImageButton
                android:id="@+id/results_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="16dp"
                android:src="@drawable/ic_arrow_right_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/down_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/center_layout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/visitant_minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/minus_one"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/visitant_score_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/points_visitant"
                android:textColor="@color/black"
                android:textSize="72sp"
                tools:text="62" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/visitant_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/plus_one"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/visitant_two_points_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/plus_two"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/visitant_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/down_layout"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Visitante"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

    </RelativeLayout>

</layout>